<resources>
    <string name="app_name">ImgFilter</string>
    <string name="chosen_pic_btn_name">选择图片</string>
    <string name="add_Text_chose_color">选择文字颜色(滑动更多选择)</string>
    <string name="add_text_color_preview">预览</string>
    <string name="save_path">/ImgFilter/Album</string>
    <string name="snack_save_prompt">照片保存成功</string>
    <string name="opacity">不透明度</string>
    <string name="more_effect_menu_settings">Settings</string>
    <string name="color_tweak_menu_string">色阶调整</string>
    <string name="hue_saturation_lightness_tweak_options_menu_string">色相饱和度调整</string>
    <string name="color_levels_channel_prompt_string">颜色通道</string>
    <string name="color_levels_shadow_prompt_string">Shadow(色阶黑点值)</string>
    <string name="color_levels_midtones_prompt_string">Midtones(色阶灰点值)</string>
    <string name="color_levels_highlight_prompt_string">Highlight(色阶白点值)</string>
    <string name="color_levels_output_shadow_prompt_string">Output Shadow(输出色阶黑点值)</string>
    <string name="color_levels_output_highlight_prompt_string">Output Highlight(输出色阶白点值)</string>
    <string name="restore_btn">还原</string>
    <string-array name="color_levels_channel_arrays">
        <item>RGB(三颜色通道)</item>
        <item>Red(红色通道)</item>
        <item>Green(绿色通道)</item>
        <item>Blue(蓝色通道)</item>
    </string-array>
    
    
</resources>
